Fix carousel arrows so they don't overlap carousel content.

--- a/src/carousel/carousel.module.scss
+++ b/src/carousel/carousel.module.scss
@@ -44,6 +44,8 @@
 }
 
 .carouselArrow {
+  position: absolute;
+  z-index: 100;
   border: none;
   cursor: pointer;
   background-color: inherit;
